--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ table{
 th{
     text-align: center;
 }
+td{
+    text-align: center;
+}
 td, th{
     border: 1px solid gray;
 
@@ -28,7 +31,6 @@ tr:nth-child(even){
     transition-duration: 0.4s;
     cursor: pointer;
 }
-  
 .button1 {
     background-color: white; 
     color: black; 
@@ -39,13 +41,18 @@ tr:nth-child(even){
     background-color: black;
     color: white;
 }
-
-div{
-    margin-left:auto;
-    margin-right:auto;
+.container{
+    display:table-cell;
+    width:4%;
+    vertical-align: midddle;
+    text-align: center;
 
 }
+.bulletsInfo{
+    display: inline-block;
 
+
+}
 #beer{
     display: none;
 }
@@ -57,4 +64,8 @@ div{
 }
 #spyglass{
     display: none;
+}
+#cigarettes{
+    display: none;
+
 }
